--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,355 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Application</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Responsive Navbar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<style>
+    @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+
+body {
+  font-family: "Urbanist", sans-serif;
+  overflow: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: currentColor;
+}
+
+header {
+  width: 100vw;
+  height: 75px;
+  background-color: #fff;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 25%);
+  display: flex;
+  align-items: center;
+}
+
+header .container-fluid {
+  width: 100%;
+  padding: 0 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header .navb-logo {
+  font-weight: 800;
+  font-size: 32px;
+}
+
+header .navb-items {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  letter-spacing: 3px;
+  width: 100%;
+}
+
+header .mobile-toggle i {
+  font-size: 20px;
+}
+
+header .item {
+  margin: 1% 3%;
+  text-align: center;
+  letter-spacing: 3px;
+  color: #102447;
+  transition: all 0.1s ease;
+  -webkit-transition: all 0.1s ease;
+  -moz-transition: all 0.1s ease;
+  -ms-transition: all 0.1s ease;
+  -o-transition: all 0.1s ease;
+  border-bottom: 0px solid #64d6f4;
+  border-top: 0px solid #64d6f4;
+  cursor: pointer;
+}
+
+header .item:hover {
+  border-bottom: 3px solid #64d6f4;
+  border-top: 3px solid #64d6f4;
+}
+
+header .item-button a {
+  background-color: #102447;
+  width: 150px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+header .item-button a:hover {
+  background-color: #64d6f4;
+}
+
+/* Modal */
+.modal-dialog {
+  margin: 0;
+  width: 430px;
+}
+
+.modal-content {
+  height: 100vh;
+  overflow: scroll;
+  background-color: #102447;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 88%;
+  margin: 0 auto;
+  padding-bottom: 16px;
+  border-bottom: 2px solid #fefefe;
+}
+
+.modal-header p {
+  font-weight: 800;
+  font-size: 32px;
+  color: white;
+}
+
+.modal-header .btn-close {
+  background: transparent;
+  opacity: 1;
+}
+
+.modal-header i {
+  color: #fefefe;
+  font-size: 30px;
+}
+
+.modal-body {
+  width: 88%;
+  margin: 0 auto;
+  padding: 25px 0;
+  flex: unset;
+}
+
+.modal-body .modal-line {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 5px 0;
+  margin-bottom: 25px;
+  cursor: pointer;
+  color: #274d8a;
+  border-bottom: 1px solid #274d8a;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+.modal-body .modal-line:hover {
+  color: #fefefe;
+  border-bottom: 1px solid #fefefe;
+}
+
+.modal-line a {
+  font-weight: 500;
+  letter-spacing: 2.5px;
+  color: #fefefe;
+}
+
+.modal-line i {
+  color: currentColor;
+  font-size: 30px;
+  width: 35px;
+  margin-right: 15px;
+  color: #fefefe;
+  padding: 0 0 3px 3px;
+}
+
+.navb-button {
+  width: 100%;
+  height: 47px;
+  background-color: #fefefe;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 700;
+  color: #274d8a;
+  letter-spacing: 2px;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+.navb-button:hover {
+  background-color: #274d8a;
+  color: #fefefe;
+}
+
+.mobile-modal-footer {
+  width: 100%;
+  margin: 0 auto;
+  padding: 10%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.mobile-modal-footer a {
+  color: #64d6f4;
+}
+
+.mobile-modal-footer a i {
+  font-size: 24px;
+}
+
+.mobile-modal-footer i:hover {
+  color: #fefefe;
+}
+
+.section-1 {
+  width: 100vw;
+  height: 95vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-1 h1,
+h2 {
+  color: #102447;
+  width: 90%;
+  text-align: center;
+}
+
+/* Responsive */
+@media (min-width: 1024px) {
+  .mobile-toggle {
+    display: none;
+  }
+}
+
+@media (max-width: 1024px) {
+  header .navb-items {
+    display: none;
+  }
+
+  .mobile-toggle {
+    display: block;
+  }
+}
+
+@media (max-width: 768px) {
+  .section-1 p {
+    font-size: 50px;
+    text-align: start;
+    width: 70%;
+    margin: auto;
+  }
+}
+
+@media (max-width: 450px) {
+  .modal-dialog {
+    width: 100%;
+  }
+}
+</style>
 <body>
     <header>
+    <div class="container-fluid">
+      <div class="navb-logo">
+        Logo
+      </div>
+      <div class="navb-items">
+        <div class="item">
+          <a href="{{ url_for('dashboard') }}">Home</a>
+        </div>
+        <div class="item">
+          <a href="{{ url_for('handle_kettle') }}">Kettle Usage</a>
+        </div>
+        <div class="item">
+          <a href="{{ url_for('handle_washing_machine') }}">Washing Machine Usage</a>
+        </div>
+        <div class="item">
+          <a href="{{ url_for('visualize_energy_usage') }}">Visualise Usage</a>
+        </div>
+        <div class="item-button">
+          <a href="#">Let's Talk</a>
+        </div>
+      </div>
+      <!-- Button Trigger Modal Start -->
+      <div class="mobile-toggle">
+        <a href="#" data-bs-toggle="modal" data-bs-target="#navModal">
+          <i class="bi bi-list"></i>
+        </a>
+      </div>
+      <!-- Modal Trigger Modal End -->
+      <!-- Modal Start -->
+      <div class="modal fade" id="navModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <p>Logo</p>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x"></i></button>
+            </div>
+            <div class="modal-body">
+              <div class="modal-line">
+                <i class="bi bi-house"></i><a href="{{ url_for('dashboard') }}">Home</a>
+              </div>
+              <div class="modal-line">
+                <i class="bi bi-info-circle"></i><a href="{{ url_for('handle_kettle') }}">Kettle Usage</a>
+              </div>
+              <div class="modal-line">
+                <i class="{{ url_for('handle_washing_machine') }}">Washing Machine Usage</a>
+              </div>
+              <div class="modal-line">
+                <i class="{{ url_for('visualize_energy_usage') }}">Visualise Usage</a>
+              </div>
+              <div class="modal-line">
+                <i class="bi bi-telephone"></i><a href="#">Let's Talk</a>
+              </div>
+            </div>
+            <div class="mobile-modal-footer">
+              <a target="_blank" href="#"><i class="bi bi-instagram"></i></a>
+              <a target="_blank" href="#"><i class="bi bi-linkedin"></i></a>
+              <a target="_blank" href="#"><i class="bi bi-youtube"></i></a>
+              <a target="_blank" href="#"><i class="bi bi-facebook"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal End -->
+    </div>
+  </header>
+<!--     <header>
         <h1> Personal Carbon Footprint Estimator for Household Appliances</h1>
         <nav>
             <a href="{{ url_for('dashboard') }}">Home</a>
@@ -17,9 +363,9 @@
           
             <a href="{{ url_for('logout') }}">Logout</a>
         </nav>
-    </header>
+    </header> -->
 
-    <main>
+    <main class="section-1">
         {% block content %}
         {% endblock %}
     </main>
@@ -27,5 +373,9 @@
     <footer>
         <p>&copy; 2024 Your Company</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
+  </script>
 </body>
 </html>
