--- a/templates/base.html
+++ b/templates/base.html
@@ -70,24 +70,24 @@ header .item {
   margin: 1% 3%;
   text-align: center;
   letter-spacing: 3px;
-  color: #102447;
+  color: #244710;
   transition: all 0.1s ease;
   -webkit-transition: all 0.1s ease;
   -moz-transition: all 0.1s ease;
   -ms-transition: all 0.1s ease;
   -o-transition: all 0.1s ease;
-  border-bottom: 0px solid #64d6f4;
-  border-top: 0px solid #64d6f4;
+  border-bottom: 0px solid #64f4a4;
+  border-top: 0px solid #64f4a4;
   cursor: pointer;
 }
 
 header .item:hover {
-  border-bottom: 3px solid #64d6f4;
-  border-top: 3px solid #64d6f4;
+  border-bottom: 3px solid #64f4a4;
+  border-top: 3px solid #64f4a4;
 }
 
 header .item-button a {
-  background-color: #102447;
+  background-color: #244710;
   width: 150px;
   height: 50px;
   display: flex;
@@ -104,7 +104,7 @@ header .item-button a {
 }
 
 header .item-button a:hover {
-  background-color: #64d6f4;
+  background-color: #64f4a4;
 }
 
 /* Modal */
@@ -116,7 +116,7 @@ header .item-button a:hover {
 .modal-content {
   height: 100vh;
   overflow: scroll;
-  background-color: #102447;
+  background-color: #244710;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -165,8 +165,8 @@ header .item-button a:hover {
   padding: 5px 0;
   margin-bottom: 25px;
   cursor: pointer;
-  color: #274d8a;
-  border-bottom: 1px solid #274d8a;
+  color: #278a5e;
+  border-bottom: 1px solid #278a5e;
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
@@ -203,7 +203,7 @@ header .item-button a:hover {
   align-items: center;
   font-size: 20px;
   font-weight: 700;
-  color: #274d8a;
+  color: #278a5e;
   letter-spacing: 2px;
   transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
@@ -213,7 +213,7 @@ header .item-button a:hover {
 }
 
 .navb-button:hover {
-  background-color: #274d8a;
+  background-color: #278a5e;
   color: #fefefe;
 }
 
@@ -227,7 +227,7 @@ header .item-button a:hover {
 }
 
 .mobile-modal-footer a {
-  color: #64d6f4;
+  color: #64f4a4;
 }
 
 .mobile-modal-footer a i {
@@ -249,7 +249,7 @@ header .item-button a:hover {
 
 .section-1 h1,
 h2 {
-  color: #102447;
+  color: #244710;
   width: 90%;
   text-align: center;
 }
@@ -290,7 +290,7 @@ h2 {
     <header>
     <div class="container-fluid">
       <div class="navb-logo">
-        Logo
+        https://www.carbonfootprint.com/assets/carbonfootprintlogo.gif
       </div>
       <div class="navb-items">
         <div class="item">
@@ -321,7 +321,7 @@ h2 {
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <p>Logo</p>
+              <p>https://www.carbonfootprint.com/assets/carbonfootprintlogo.gif</p>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x"></i></button>
             </div>
             <div class="modal-body">
@@ -371,7 +371,7 @@ h2 {
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Company</p>
+        <p>&copy; 2024 Demmie MSC Carbon Foot Print</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
   </script>
