--- a/templates/base.html
+++ b/templates/base.html
@@ -332,10 +332,10 @@ h2 {
                 <i class="bi bi-info-circle"></i><a href="{{ url_for('handle_kettle') }}">Kettle Usage</a>
               </div>
               <div class="modal-line">
-                <i class="{{ url_for('handle_washing_machine') }}">Washing Machine Usage</a>
+                <i class="bi bi-filetype-doc"></i><a href="{{ url_for('handle_washing_machine') }}">Washing Machine Usage</a>
               </div>
               <div class="modal-line">
-                <i class="{{ url_for('visualize_energy_usage') }}">Visualise Usage</a>
+                <i class="bi bi-folder-check"></i><a href="{{ url_for('visualize_energy_usage') }}">Visualise Usage</a>
               </div>
               <div class="modal-line">
                 <i class="bi bi-telephone"></i><a href="#">Let's Talk</a>
