--- a/templates/base.html
+++ b/templates/base.html
@@ -245,6 +245,8 @@ header .item-button a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+    background-color: white;
+    box-shadow: none;
 }
 
 .section-1 h1,
