--- a/templates/base.html
+++ b/templates/base.html
@@ -292,7 +292,7 @@ h2 {
     <header>
     <div class="container-fluid">
       <div class="navb-logo">
-        https://www.carbonfootprint.com/assets/carbonfootprintlogo.gif
+        <img src="https://www.pharmacymagazine.co.uk/images/view/f565fe3567eaa1cbb32e7339028e74a6.jpg" width="20vw">
       </div>
       <div class="navb-items">
         <div class="item">
@@ -323,7 +323,7 @@ h2 {
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <p>https://www.carbonfootprint.com/assets/carbonfootprintlogo.gif</p>
+              <p><img src="https://www.pharmacymagazine.co.uk/images/view/f565fe3567eaa1cbb32e7339028e74a6.jpg" width="20vw"></p>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x"></i></button>
             </div>
             <div class="modal-body">
