--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- <div class="dashboard-container">
-    <h1>Welcome back 👋🏾</h1> -->
+<div class="dashboard-container">
+<!--     <h1>Welcome back 👋🏾</h1> -->
 <!--     <nav class="sidebar">
         <ul>
            <li><a href="{{ url_for('dashboard') }}">Home</a></li> 
@@ -17,5 +17,5 @@
         <h1>Welcome back 👋🏾</h1><br>
         <img src="{{ url_for('static', filename='images/cb1.jpg') }}" alt="Carbon Footprint" class="background-image">
     </div>
-<!-- </div> -->
+</div>
 {% endblock %}
