--- a/templates/base.html
+++ b/templates/base.html
@@ -292,7 +292,7 @@ h2 {
     <header>
     <div class="container-fluid">
       <div class="navb-logo">
-        <img src="https://www.pharmacymagazine.co.uk/images/view/f565fe3567eaa1cbb32e7339028e74a6.jpg" width="20vw">
+        <img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="80px">
       </div>
       <div class="navb-items">
         <div class="item">
@@ -323,7 +323,7 @@ h2 {
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <p><img src="https://www.pharmacymagazine.co.uk/images/view/f565fe3567eaa1cbb32e7339028e74a6.jpg" width="20vw"></p>
+              <p><img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="50px"></p>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x"></i></button>
             </div>
             <div class="modal-body">
