--- a/templates/base.html
+++ b/templates/base.html
@@ -9,16 +9,13 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 
 body {
   font-family: "Urbanist", sans-serif;
-  overflow: hidden;
+    overflow: hidden;
 }
 
 a {
@@ -57,6 +54,7 @@ header .navb-items {
   justify-content: flex-end;
   letter-spacing: 3px;
   width: 100%;
+color: #244710;
 }
 
 header .mobile-toggle i {
@@ -80,7 +78,7 @@ header .item {
 
 header .item:hover {
   border-bottom: 3px solid #64f4a4;
-  border-top: 3px solid #64f4a4;
+/*   border-top: 3px solid #64f4a4; */
 }
 
 header .item-button a {
