--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="dashboard-container">
+<div class="container">
 <!--     <h1>Welcome back 👋🏾</h1> -->
 <!--     <nav class="sidebar">
         <ul>
