--- a/templates/base.html
+++ b/templates/base.html
@@ -287,7 +287,7 @@ h2 {
     <header>
     <div class="container-fluid">
       <div class="navb-logo">
-        <img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="80px">
+        <img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="80px" class="img-responsive">
       </div>
       <div class="navb-items">
         <div class="item">
@@ -318,7 +318,7 @@ h2 {
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <p><img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="50px"></p>
+              <p><img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="50px" class="img-responsive"></p>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x"></i></button>
             </div>
             <div class="modal-body">
