--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Application</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+<!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 </head>
 <style>
     @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 
-body {
+/* body {
   font-family: "Urbanist", sans-serif;
     overflow: hidden;
 }
@@ -78,7 +80,6 @@ header .item {
 
 header .item:hover {
   border-bottom: 3px solid #64f4a4;
-/*   border-top: 3px solid #64f4a4; */
 }
 
 header .item-button a {
@@ -102,7 +103,7 @@ header .item-button a:hover {
   background-color: #64f4a4;
 }
 
-/* Modal */
+
 .modal-dialog {
   margin: 0;
   width: 430px;
@@ -235,8 +236,8 @@ header .item-button a:hover {
 
 .section-1 {
   width: 100vw;
-/*   height: 95vh;
-  display: flex; */
+  height: 95vh;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -251,7 +252,7 @@ h2 {
   text-align: center;
 }
 
-/* Responsive */
+
 @media (min-width: 1024px) {
   .mobile-toggle {
     display: none;
@@ -281,75 +282,154 @@ h2 {
   .modal-dialog {
     width: 100%;
   }
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+
+body{
+  font-family: 'Barlow', sans-serif;
 }
+
+a:hover{
+  text-decoration: none;
+}
+
+.border-left{
+  border-left: 2px solid var(--primary) !important;
+}
+
+
+.sidebar{
+  top: 0;
+  left : 0;
+  z-index : 100;
+  overflow-y: auto;
+}
+
+.overlay{
+  background-color: rgb(0 0 0 / 45%);
+  z-index: 99;
+}
+
+/* sidebar for small screens */
+@media screen and (max-width: 767px){
+  
+  .sidebar{
+    max-width: 18rem;
+    transform : translateX(-100%);
+    transition : transform 0.4s ease-out;
+  }
+  
+  .sidebar.active{
+    transform : translateX(0);
+  }
+  
+}    
 </style>
 <body>
-    <header>
     <div class="container-fluid">
-      <div class="navb-logo">
-        <img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="80px" class="img-responsive">
-      </div>
-      <div class="navb-items">
-        <div class="item">
-          <a href="{{ url_for('dashboard') }}">Home</a>
-        </div>
-        <div class="item">
-          <a href="{{ url_for('handle_kettle') }}">Kettle Usage</a>
-        </div>
-        <div class="item">
-          <a href="{{ url_for('handle_washing_machine') }}">Washing Machine Usage</a>
-        </div>
-        <div class="item">
-          <a href="{{ url_for('visualize_energy_usage') }}">Visualise Usage</a>
-        </div>
-        <div class="item-button">
-          <a href="{{ url_for('logout') }}">Logout</a>
-        </div>
-      </div>
-      <!-- Button Trigger Modal Start -->
-      <div class="mobile-toggle">
-        <a href="#" data-bs-toggle="modal" data-bs-target="#navModal">
-          <i class="bi bi-list"></i>
+  <div class="row">
+    <!-- sidebar -->
+    <div class="col-md-3 col-lg-2 px-0 position-fixed h-100 bg-white shadow-sm sidebar" id="sidebar">
+<!--       <h1 class="bi bi-bootstrap text-primary d-flex my-4 justify-content-center"></h1> -->
+        <img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="80px" class="img-responsive d-flex my-4 justify-content-center">
+      <div class="list-group rounded-0">
+        <a href="{{ url_for('dashboard') }}" class="list-group-item list-group-item-action active border-0 d-flex align-items-center">
+          <span class="bi bi-border-all"></span>
+          <span class="ml-2">Home</span>
         </a>
-      </div>
-      <!-- Modal Trigger Modal End -->
-      <!-- Modal Start -->
-      <div class="modal fade" id="navModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <p><img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="50px" class="img-responsive"></p>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="bi bi-x"></i></button>
-            </div>
-            <div class="modal-body">
-              <div class="modal-line">
-                <i class="bi bi-house"></i><a href="{{ url_for('dashboard') }}">Home</a>
-              </div>
-              <div class="modal-line">
-                <i class="bi bi-info-circle"></i><a href="{{ url_for('handle_kettle') }}">Kettle Usage</a>
-              </div>
-              <div class="modal-line">
-                <i class="bi bi-filetype-doc"></i><a href="{{ url_for('handle_washing_machine') }}">Washing Machine Usage</a>
-              </div>
-              <div class="modal-line">
-                <i class="bi bi-folder-check"></i><a href="{{ url_for('visualize_energy_usage') }}">Visualise Usage</a>
-              </div>
-              <div class="modal-line">
-                <i class="bi bi-telephone"></i><a href="{{ url_for('logout') }}">Logout</a>
-              </div>
-            </div>
-            <div class="mobile-modal-footer">
-              <a target="_blank" href="#"><i class="bi bi-instagram"></i></a>
-              <a target="_blank" href="#"><i class="bi bi-linkedin"></i></a>
-              <a target="_blank" href="#"><i class="bi bi-youtube"></i></a>
-              <a target="_blank" href="#"><i class="bi bi-facebook"></i></a>
-            </div>
+        <a href="{{ url_for('handle_kettle') }}" class="list-group-item list-group-item-action border-0 align-items-center">
+          <span class="bi bi-box"></span>
+          <span class="ml-2">Kettle Usage</span>
+        </a>
+        <a href="{{ url_for('handle_washing_machine') }}" class="list-group-item list-group-item-action border-0 align-items-center">
+          <span class="bi bi-box"></span>
+          <span class="ml-2">Washine Machine Usage</span>
+        </a>
+        <a href="{{ url_for('visualize_energy_usage') }}" class="list-group-item list-group-item-action border-0 align-items-center">
+          <span class="bi bi-box"></span>
+          <span class="ml-2">Visualise energy Usage</span>
+        </a>
+
+        <button class="list-group-item list-group-item-action border-0 d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#sale-collapse">
+          <div>
+            <span class="bi bi-person"></span>
+            <span class="ml-2">My Account</span>
+          </div>
+          <span class="bi bi-chevron-down small"></span>
+        </button>
+        <div class="collapse" id="sale-collapse" data-parent="#sidebar">
+          <div class="list-group">
+            <a href="{{ url_for('logout') }}" class="list-group-item list-group-item-action border-0 pl-5">Logout</a>
+            <a href="#" class="list-group-item list-group-item-action border-0 pl-5">Settings</a>
           </div>
         </div>
+
       </div>
-      <!-- Modal End -->
     </div>
-  </header>
+    <!-- overlay to close sidebar on small screens -->
+    <div class="w-100 vh-100 position-fixed overlay d-none" id="sidebar-overlay"></div>
+    <!-- note: in the layout margin auto is the key as sidebar is fixed -->
+    <div class="col-md-9 col-lg-10 ml-md-auto px-0">
+      <!-- top nav -->
+      <nav class="w-100 d-flex px-4 py-2 mb-4 shadow-sm">
+        <!-- close sidebar -->
+        <button class="btn py-0 d-lg-none" id="open-sidebar">
+          <span class="bi bi-list text-primary h3"></span>
+        </button>
+        <div class="dropdown ml-auto">
+          <button class="btn py-0 d-flex align-items-center" id="logout-dropdown" data-toggle="dropdown" aria-expanded="false">
+            <span class="bi bi-person text-primary h4"></span>
+            <span class="bi bi-chevron-down ml-1 mb-2 small"></span>
+          </button>
+          <div class="dropdown-menu dropdown-menu-right border-0 shadow-sm" aria-labelledby="logout-dropdown">
+            <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
+            <a class="dropdown-item" href="#">Settings</a>
+          </div>
+        </div>
+      </nav>
+      <!-- main content -->
+      <main class="container-fluid">
+        <section class="row">
+          <div class="col-md-6 col-lg-4">
+            <article class="p-4 rounded shadow-sm border-left
+               mb-4">
+              <a href="{{ url_for('handle_kettle') }}" class="d-flex align-items-center">
+                <span class="bi bi-box h5"></span>
+                <h5 class="ml-2">Kettle</h5>
+              </a>
+            </article>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <article class="p-4 rounded shadow-sm border-left mb-4">
+              <a href="{{ url_for('handle_washing_machine') }}" class="d-flex align-items-center">
+                <span class="bi bi-person h5"></span>
+                <h5 class="ml-2">Washing Machine</h5>
+              </a>
+            </article>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <article class="p-4 rounded shadow-sm border-left mb-4">
+              <a href="{{ url_for('visualize_energy_usage') }}" class="d-flex align-items-center">
+                <span class="bi bi-person-check h5"></span>
+                <h5 class="ml-2">Usage</h5>
+              </a>
+            </article>
+          </div>
+        </section>
+        
+        <div class="jumbotron jumbotron-fluid rounded bg-white border-0 shadow-sm border-left px-4">
+  <div class="container">
+<!--     <h1 class="display-4 mb-2 text-primary">Simple</h1>
+    <p class="lead text-muted">Simple Admin Dashboard with Bootstrap.</p> -->
+    {% block content %}
+    {% endblock %}
+  </div>
+</div>
+      </main>
+    </div>
+  </div>
+</div>
 <!--     <header>
         <h1> Personal Carbon Footprint Estimator for Household Appliances</h1>
         <nav>
@@ -361,20 +441,33 @@ h2 {
             <a href="{{ url_for('logout') }}">Logout</a>
         </nav>
     </header> -->
-<div class="container">
-    <main class="section-1">
-        <p><br></p>
-        {% block content %}
-        {% endblock %}
-    </main>
-        </div>
 
-    <footer>
+
+<!--     <footer>
         <p>&copy; 2024 Demmie MSC Carbon Foot Print</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+    </footer> -->
+<!--     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-  </script>
+  </script> -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(()=>{
+  $('#open-sidebar').click(()=>{
+      // add class active on #sidebar
+      $('#sidebar').addClass('active');
+      // show sidebar overlay
+      $('#sidebar-overlay').removeClass('d-none');
+   });
+   $('#sidebar-overlay').click(function(){
+      // add class active on #sidebar
+      $('#sidebar').removeClass('active');
+      // show sidebar overlay
+      $(this).addClass('d-none');
+   });
+});
+</script>
 </body>
 </html>
