--- a/templates/base.html
+++ b/templates/base.html
@@ -295,7 +295,7 @@ a:hover{
 }
 
 .border-left{
-  border-left: 2px solid var(--primary) !important;
+  border-left: 2px solid var(--success) !important;
 }
 
 
@@ -304,6 +304,9 @@ a:hover{
   left : 0;
   z-index : 100;
   overflow-y: auto;
+}
+.sidebar.active{
+    background-color: #388e3c;
 }
 
 .overlay{
@@ -331,23 +334,23 @@ a:hover{
   <div class="row">
     <!-- sidebar -->
     <div class="col-md-3 col-lg-2 px-0 position-fixed h-100 bg-white shadow-sm sidebar" id="sidebar">
-<!--       <h1 class="bi bi-bootstrap text-primary d-flex my-4 justify-content-center"></h1> -->
-        <img src="https://static.vecteezy.com/system/resources/previews/033/333/467/original/carbon-footprint-line-icon-illustration-free-png.png" width="80px" class="img-responsive d-flex my-4 justify-content-center">
+<!--       <h1 class="bi bi-bootstrap text-success d-flex my-4 justify-content-center"></h1> -->
+        <img src="https://www.keepcarrollbeautiful.org/wp-content/uploads/2024/03/Ecological-Footprint-1-203mdvy.jpg" width="80px" class="img-responsive d-flex my-4 justify-content-center">
       <div class="list-group rounded-0">
         <a href="{{ url_for('dashboard') }}" class="list-group-item list-group-item-action active border-0 d-flex align-items-center">
           <span class="bi bi-border-all"></span>
           <span class="ml-2">Home</span>
         </a>
         <a href="{{ url_for('handle_kettle') }}" class="list-group-item list-group-item-action border-0 align-items-center">
-          <span class="bi bi-box"></span>
+          <span class="bi bi-cup"></span>
           <span class="ml-2">Kettle Usage</span>
         </a>
         <a href="{{ url_for('handle_washing_machine') }}" class="list-group-item list-group-item-action border-0 align-items-center">
-          <span class="bi bi-box"></span>
+          <span class="bi bi-record-circle"></span>
           <span class="ml-2">Washine Machine Usage</span>
         </a>
         <a href="{{ url_for('visualize_energy_usage') }}" class="list-group-item list-group-item-action border-0 align-items-center">
-          <span class="bi bi-box"></span>
+          <span class="bi bi-graph-box"></span>
           <span class="ml-2">Visualise energy Usage</span>
         </a>
 
@@ -375,11 +378,11 @@ a:hover{
       <nav class="w-100 d-flex px-4 py-2 mb-4 shadow-sm">
         <!-- close sidebar -->
         <button class="btn py-0 d-lg-none" id="open-sidebar">
-          <span class="bi bi-list text-primary h3"></span>
+          <span class="bi bi-list text-success h3"></span>
         </button>
         <div class="dropdown ml-auto">
           <button class="btn py-0 d-flex align-items-center" id="logout-dropdown" data-toggle="dropdown" aria-expanded="false">
-            <span class="bi bi-person text-primary h4"></span>
+            <span class="bi bi-person text-success h4"></span>
             <span class="bi bi-chevron-down ml-1 mb-2 small"></span>
           </button>
           <div class="dropdown-menu dropdown-menu-right border-0 shadow-sm" aria-labelledby="logout-dropdown">
@@ -420,7 +423,7 @@ a:hover{
         
         <div class="jumbotron jumbotron-fluid rounded bg-white border-0 shadow-sm border-left px-4">
   <div class="container">
-<!--     <h1 class="display-4 mb-2 text-primary">Simple</h1>
+<!--     <h1 class="display-4 mb-2 text-success">Simple</h1>
     <p class="lead text-muted">Simple Admin Dashboard with Bootstrap.</p> -->
     {% block content %}
     {% endblock %}
