--- a/templates/base.html
+++ b/templates/base.html
@@ -335,7 +335,7 @@ a:hover{
     <!-- sidebar -->
     <div class="col-md-3 col-lg-2 px-0 position-fixed h-100 bg-white shadow-sm sidebar" id="sidebar">
 <!--       <h1 class="bi bi-bootstrap text-success d-flex my-4 justify-content-center"></h1> -->
-        <img src="https://www.keepcarrollbeautiful.org/wp-content/uploads/2024/03/Ecological-Footprint-1-203mdvy.jpg" width="80px" class="img-responsive d-flex my-4 justify-content-center">
+        <img src="https://www.keepcarrollbeautiful.org/wp-content/uploads/2024/03/Ecological-Footprint-1-203mdvy.jpg" width="100%" class="img-responsive d-flex my-4 justify-content-center">
       <div class="list-group rounded-0">
         <a href="{{ url_for('dashboard') }}" class="list-group-item list-group-item-action active border-0 d-flex align-items-center">
           <span class="bi bi-border-all"></span>
@@ -397,7 +397,7 @@ a:hover{
           <div class="col-md-6 col-lg-4">
             <article class="p-4 rounded shadow-sm border-left
                mb-4">
-              <a href="{{ url_for('handle_kettle') }}" class="d-flex align-items-center">
+              <a href="{{ url_for('handle_kettle') }}" class="d-flex align-items-center text-success">
                 <span class="bi bi-box h5"></span>
                 <h5 class="ml-2">Kettle</h5>
               </a>
@@ -405,7 +405,7 @@ a:hover{
           </div>
           <div class="col-md-6 col-lg-4">
             <article class="p-4 rounded shadow-sm border-left mb-4">
-              <a href="{{ url_for('handle_washing_machine') }}" class="d-flex align-items-center">
+              <a href="{{ url_for('handle_washing_machine') }}" class="d-flex align-items-center text-success">
                 <span class="bi bi-person h5"></span>
                 <h5 class="ml-2">Washing Machine</h5>
               </a>
@@ -413,7 +413,7 @@ a:hover{
           </div>
           <div class="col-md-6 col-lg-4">
             <article class="p-4 rounded shadow-sm border-left mb-4">
-              <a href="{{ url_for('visualize_energy_usage') }}" class="d-flex align-items-center">
+              <a href="{{ url_for('visualize_energy_usage') }}" class="d-flex align-items-center text-success">
                 <span class="bi bi-person-check h5"></span>
                 <h5 class="ml-2">Usage</h5>
               </a>
