--- a/templates/base.html
+++ b/templates/base.html
@@ -305,7 +305,7 @@ a:hover{
   z-index : 100;
   overflow-y: auto;
 }
-.sidebar.active{
+.list-group-item.active{
     background-color: #388e3c;
 }
 
@@ -335,7 +335,7 @@ a:hover{
     <!-- sidebar -->
     <div class="col-md-3 col-lg-2 px-0 position-fixed h-100 bg-white shadow-sm sidebar" id="sidebar">
 <!--       <h1 class="bi bi-bootstrap text-success d-flex my-4 justify-content-center"></h1> -->
-        <img src="https://www.keepcarrollbeautiful.org/wp-content/uploads/2024/03/Ecological-Footprint-1-203mdvy.jpg" width="100%" class="img-responsive d-flex my-4 justify-content-center">
+        <img src="https://small99.co.uk/wp-content/uploads/2021/07/compare.png" width="100%" class="img-responsive d-flex my-4 justify-content-center">
       <div class="list-group rounded-0">
         <a href="{{ url_for('dashboard') }}" class="list-group-item list-group-item-action active border-0 d-flex align-items-center">
           <span class="bi bi-border-all"></span>
@@ -350,17 +350,21 @@ a:hover{
           <span class="ml-2">Washine Machine Usage</span>
         </a>
         <a href="{{ url_for('visualize_energy_usage') }}" class="list-group-item list-group-item-action border-0 align-items-center">
-          <span class="bi bi-graph-box"></span>
+          <span class="bi bi-graph-up"></span>
           <span class="ml-2">Visualise energy Usage</span>
         </a>
+        <a href="{{ url_for('visualize_energy_usage') }}" class="list-group-item list-group-item-action border-0 align-items-center">
+          <span class="bi bi-person"></span>
+          <span class="ml-2">Logout</span>
+        </a>
 
-        <button class="list-group-item list-group-item-action border-0 d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#sale-collapse">
+<!--         <button class="list-group-item list-group-item-action border-0 d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#sale-collapse">
           <div>
             <span class="bi bi-person"></span>
             <span class="ml-2">My Account</span>
           </div>
           <span class="bi bi-chevron-down small"></span>
-        </button>
+        </button> -->
         <div class="collapse" id="sale-collapse" data-parent="#sidebar">
           <div class="list-group">
             <a href="{{ url_for('logout') }}" class="list-group-item list-group-item-action border-0 pl-5">Logout</a>
@@ -398,7 +402,7 @@ a:hover{
             <article class="p-4 rounded shadow-sm border-left
                mb-4">
               <a href="{{ url_for('handle_kettle') }}" class="d-flex align-items-center text-success">
-                <span class="bi bi-box h5"></span>
+                <span class="bi bi-cup h5"></span>
                 <h5 class="ml-2">Kettle</h5>
               </a>
             </article>
@@ -406,7 +410,7 @@ a:hover{
           <div class="col-md-6 col-lg-4">
             <article class="p-4 rounded shadow-sm border-left mb-4">
               <a href="{{ url_for('handle_washing_machine') }}" class="d-flex align-items-center text-success">
-                <span class="bi bi-person h5"></span>
+                <span class="bi bi-record-circle h5"></span>
                 <h5 class="ml-2">Washing Machine</h5>
               </a>
             </article>
@@ -414,7 +418,7 @@ a:hover{
           <div class="col-md-6 col-lg-4">
             <article class="p-4 rounded shadow-sm border-left mb-4">
               <a href="{{ url_for('visualize_energy_usage') }}" class="d-flex align-items-center text-success">
-                <span class="bi bi-person-check h5"></span>
+                <span class="bi bi-graph-up h5"></span>
                 <h5 class="ml-2">Usage</h5>
               </a>
             </article>
