--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,7 +16,7 @@
 <!--     <div class="main-content"> -->
         <h1 class="display-4 mb-2 text-success">Welcome back, Admin 👋🏾</h1>
         <p class="lead text-muted">This is a Carbon Footprint Project by Lawson Adetutu Demilade</p>
-        <img src="{{ url_for('static', filename='images/cb1.jpg') }}" alt="Carbon Footprint" class="img-responsive">
+        <img src="{{ url_for('static', filename='images/cb1.jpg') }}" alt="Carbon Footprint" width="100%" class="img-responsive">
 <!--     </div> -->
 </div>
 {% endblock %}
