--- a/templates/base.html
+++ b/templates/base.html
@@ -353,7 +353,7 @@ a:hover{
           <span class="bi bi-graph-up"></span>
           <span class="ml-2">Visualise energy Usage</span>
         </a>
-        <a href="{{ url_for('visualize_energy_usage') }}" class="list-group-item list-group-item-action border-0 align-items-center">
+        <a href="{{ url_for('logout') }}" class="list-group-item list-group-item-action border-0 align-items-center">
           <span class="bi bi-person"></span>
           <span class="ml-2">Logout</span>
         </a>
