--- a/templates/base.html
+++ b/templates/base.html
@@ -365,12 +365,12 @@ a:hover{
           </div>
           <span class="bi bi-chevron-down small"></span>
         </button> -->
-        <div class="collapse" id="sale-collapse" data-parent="#sidebar">
+<!--         <div class="collapse" id="sale-collapse" data-parent="#sidebar">
           <div class="list-group">
             <a href="{{ url_for('logout') }}" class="list-group-item list-group-item-action border-0 pl-5">Logout</a>
             <a href="#" class="list-group-item list-group-item-action border-0 pl-5">Settings</a>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -386,7 +386,7 @@ a:hover{
         </button>
         <div class="dropdown ml-auto">
           <button class="btn py-0 d-flex align-items-center" id="logout-dropdown" data-toggle="dropdown" aria-expanded="false">
-            <span class="bi bi-person text-success h4"></span>
+            Admin - <span class="bi bi-person text-success h4"></span>
             <span class="bi bi-chevron-down ml-1 mb-2 small"></span>
           </button>
           <div class="dropdown-menu dropdown-menu-right border-0 shadow-sm" aria-labelledby="logout-dropdown">
